<?xml version="1.0"?>
<!-- Full information here http://wiki.ros.org/catkin/package.xml -->
<package format="2">
  <name>connectivity</name>
  <version>0.1.0</version>
  <description>
    ROS package for building a communication graph and moving robots to terminal and intermiadte nodes necessary for ensuring connectiion
  </description>
  <maintainer email="zitong.wu.gr@dartmouth.edu">Class</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf</depend>
</package>
